--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,11 @@
     "name": "Insider Dev Tour",
     "scope": "/",
     "display": "browser",
-    "start_url": "https://idt19.azurewebsites.net/",
+    "start_url": "/index2.html",
     "short_name": "IDT PWA",
     "theme_color": "transparent",
     "description": "",
-    "orientation": "any",
+    "orientation": "standalone",
     "background_color": "transparent",
     "related_applications": [],
     "prefer_related_applications": false,
